--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
     font-family: 'Roboto', sans-serif;
     color: var(--main-p-color);
+    font-size: 14px;
 }
 
 a {
@@ -71,17 +72,12 @@ a {
     text-transform: uppercase;
 }
 
-.services {
-
-}
-
 /* --------------- 3.2 Other --------------------------- */
 
 /* ------------------------------- 4. Areas ---------------------------------------- */
 
 /* --------------- 4.1 Header ------------------------- */
 header {
-
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -137,13 +133,12 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 5px solid purple;
 }
 
 
 /* --------------- 4.2.1 introduction ------------------- */
 .outer-container_section_intro {
-    flex-basis: 40vh;
+    flex-basis: auto;
     width: 1200px;
     display: flex;
     flex-direction: column;
@@ -179,13 +174,13 @@ main {
 
 /* --------------- 4.2.2 Projects ------------------- */
 .outer-container_section_projects {
-    flex-basis: 40vh;
+    flex-basis: auto;
     width: 1200px;
     display: flex;
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 1;
-    border: 5px dashed yellow;
+    margin: 50px 0;
 }
 
 .inner-container_projects {
@@ -196,7 +191,6 @@ main {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    border: 2px solid darkblue;
 }
 
 .reverse {
@@ -209,7 +203,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 2px dotted orange;
 }
 
 .inner-container_div_projects > h2 {
@@ -224,20 +217,159 @@ main {
     text-transform: uppercase;
 }
 
+.image-wrapper-squiggle > img {
+    width: 100%;
+}
+
 .image-wrapper-squiggle {
-    flex-basis: 50px;
+    max-width: 60px;
     flex-grow: 0;
     flex-shrink: 0;
 }
 
+.image-wrapper-projects > img {
+    width: 100%;
+}
+
 .image-wrapper-projects {
-    flex-basis: 800px;
+    max-width: 800px;
     flex-grow: 0;
     flex-shrink: 1;
 }
 
 /* --------------- 4.2.3 Services ------------------- */
 
+.outer-container_section_services {
+    flex-basis: auto;
+    width: 1200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: white;
+}
+
+.outer-container_div_services {
+    flex-basis: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 50px 0;
+}
+
+.inner-container_services {
+    flex-basis: 20vw;
+    height: 25vh;
+    border: 1px solid var(--purple);
+    box-shadow: 5px 10px 10px #8888;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 20px;
+    margin: 10px;
+}
+
+.inner-container_services > h3 {
+    color: var(--purple);
+}
+
+.image-wrapper-icons > img {
+    width: 100%;
+}
+
+.image-wrapper-icons {
+    max-width: 75px;
+    flex-basis: 75px
+}
+
+/* --------------- 4.2.4 Form section ------------------- */
+.outer-container_section_form {
+    flex-basis: auto;
+    width: 1200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: var(--header-bg-radient);
+}
+
+.inner-container_div_form {
+    flex-basis: 600px;
+    color: var(--big-floating-words);
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 0 25px 0;
+}
+
+.inner-container_div_form > h1 {
+    color: var(--big-floating-words);
+    font-size: 32px;
+    padding-bottom: 20px;
+}
+
+.inner-container_div_form > p {
+    color: var(--big-floating-words);
+}
+
+.inner-container_form {
+    border-radius: 10px 10px 10px 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0;
+}
+
+form > input {
+    padding: 10px 10px;
+    border-radius: 2px;
+    border: none;
+    margin-bottom: 30px;
+}
+
+form > textarea {
+    padding: 10px 10px;
+    border-radius: 2px;
+    border: none;
+}
+
+
+.button_form {
+    color: var(--big-floating-words);
+    border: none;
+    border-radius: 20px;
+    box-shadow: 5px 10px 100px grey;
+    background-color: var(--button-color);
+    padding: 15px 25px;
+    margin: 20px;
+    text-transform: uppercase;
+}
+
+/* --------------- 4.3 Footer ------------------- */
 
 
 /* ------------------------------- 5. Media Queries -------------------------------- */
+@media screen and (min-width: 0px) and (max-width: 576px) {
+    p {
+        font-size: 10px;
+    }
+    .outer-container_div_services {
+        flex-direction: column;
+        flex-basis: 570px;
+    }
+}
+
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    p {
+        font-size: 12px;
+    }
+    .outer-container_div_services {
+        flex-direction: column;
+        flex-basis: 577px;
+        flex-grow: 1;
+    }
+}
